--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -2,6 +2,13 @@
 
 <h2>Profile</h2>
 
+@if (!string.IsNullOrEmpty(ViewBag.Message))
+{
+    <div class="alert alert-success">
+        @ViewBag.Message
+    </div>
+}
+
 <div>
     <p><strong>Ad:</strong> @Model.Ad</p>
     <p><strong>Soyad:</strong> @Model.Soyad</p>
