--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -2,9 +2,6 @@
     ViewData["Title"] = "Login";
 }
 
-<!-- Başlık -->
-<h2>Login</h2>
-
 <section class="vh-100" style="background-color: #9A616D;">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -13,14 +10,12 @@
                     <div class="row g-0">
                         <div class="col-md-6 col-lg-5 d-none d-md-block">
                             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                                 alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                 alt="login form" class="img-fluid" />
                         </div>
                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-5 text-black">
 
-                                <!-- Razor form for login -->
                                 <form asp-action="Login" method="post">
-
                                     <div class="d-flex align-items-center mb-3 pb-1">
                                         <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                                         <span class="h1 fw-bold mb-0">Logo</span>
@@ -28,19 +23,16 @@
 
                                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
 
-                                    <!-- Email alanı -->
                                     <div class="form-outline mb-4">
                                         <input type="email" id="Email" name="email" class="form-control form-control-lg" required />
                                         <label class="form-label" for="Email">Email address</label>
                                     </div>
 
-                                    <!-- Şifre alanı -->
                                     <div class="form-outline mb-4">
                                         <input type="password" id="Sifre" name="sifre" class="form-control form-control-lg" required />
                                         <label class="form-label" for="Sifre">Password</label>
                                     </div>
 
-                                    <!-- Giriş Yap butonu -->
                                     <div class="pt-1 mb-4">
                                         <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                                     </div>
