--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -2,26 +2,26 @@
     ViewData["Title"] = "Login";
 }
 
-<section class="vh-100" style="background-color: #9A616D;">
-    <div class="container py-5 h-100">
+<section class="vh-100 section-bg">
+    <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col col-xl-10">
-                <div class="card" style="border-radius: 1rem;">
+                <div class="card">
                     <div class="row g-0">
                         <div class="col-md-6 col-lg-5 d-none d-md-block">
                             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img1.webp"
-                                 alt="login form" class="img-fluid" />
+                                 alt="login form" class="img-fluid form-image" />
                         </div>
                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                             <div class="card-body p-4 p-lg-5 text-black">
 
                                 <form asp-action="Login" method="post">
-                                    <div class="d-flex align-items-center mb-3 pb-1">
-                                        <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                                    <div class="form-header">
+                                        <i class="fas fa-cubes"></i>
                                         <span class="h1 fw-bold mb-0">Logo</span>
                                     </div>
 
-                                    <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
+                                    <h5 class="form-title">Sign into your account</h5>
 
                                     <div class="form-outline mb-4">
                                         <input type="email" id="Email" name="email" class="form-control form-control-lg" required />
@@ -34,15 +34,15 @@
                                     </div>
 
                                     <div class="pt-1 mb-4">
-                                        <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                                        <button class="btn btn-custom btn-lg btn-block" type="submit">Login</button>
                                     </div>
 
-                                    <a class="small text-muted" href="#!">Forgot password?</a>
-                                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? 
-                                        <a href="@Url.Action("Register", "Account")" style="color: #393f81;">Register here</a>
+                                    <a class="small small-text" href="#!">Forgot password?</a>
+                                    <p class="mb-5 pb-lg-2 small-text">Don't have an account? 
+                                        <a href="@Url.Action("Register", "Account")" class="small-text">Register here</a>
                                     </p>
-                                    <a href="#!" class="small text-muted">Terms of use.</a>
-                                    <a href="#!" class="small text-muted">Privacy policy</a>
+                                    <a href="#!" class="small small-text">Terms of use.</a>
+                                    <a href="#!" class="small small-text">Privacy policy</a>
                                 </form>
 
                             </div>
