ana sayfaya kartlar ekledim

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,14 +2,38 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="d-flex justify-content-center align-items-center vh-100 flex-column text-center" style="margin-top: -50px;">
-    <h1 class="display-4">Welcome</h1>
-    <img src="~/images/avatar.png" alt="Avatar" class="img-fluid mt-3" style="width: 80%; max-width: 800px; height: auto;">
-    <p class="mt-3">Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center mt-5">
+    <h1 class="display-4">Hoş Geldiniz</h1>
 </div>
 
-<footer class="text-muted position-fixed bottom-0 start-0 p-3 w-100">
-    <div class="container">
-        <p class="mb-0">&copy; 2024 - UniversiteOgrenciYonetimSistemi - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <div class="card">
+                <img src="~/images/osym.jpg" class="card-img-top" alt="2024 YKS Tercih Sonuçları Açıklandı">
+                <div class="card-body">
+                    <h5 class="card-title">2024 YKS Tercih Sonuçları Açıklandı!</h5>
+                    <a href="#" class="btn btn-primary">Detaylara Git</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="~/images/universite_kayit.jpg" class="card-img-top" alt="Üniversite Kayıt Günleri Başladı">
+                <div class="card-body">
+                    <h5 class="card-title">Üniversite Kayıt Günleri Başladı!</h5>
+                    <a href="#" class="btn btn-primary">Detaylara Git</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="~/images/akademik_takvim.png" class="card-img-top" alt="2024-2025 Eğitim Öğretim Dönemi Akademik Takvim Açıklandı">
+                <div class="card-body">
+                    <h5 class="card-title">2024-2025 Eğitim Öğretim Dönemi Akademik Takvim Açıklandı!</h5>
+                    <a href="#" class="btn btn-primary">Detaylara Git</a>
+                </div>
+            </div>
+        </div>
     </div>
-</footer>
+</div>
